wp-content/themes/viaembedded/style-ie.css
/*--------------------------------------------------------------
Site Header
--------------------------------------------------------------*/

#banner-row {
    height: 98px;
    background: white;
}

.banner-section {
    height: 98px;
}

#banner-center {
}

/* based on http://stackoverflow.com/questions/6783902/offset-div-from-center */
#banner-logo-outer {
    position: relative;
    height:50px;
}

#banner-logo {
    float: right;
}

#site-navigation-outer {
    clear: none;
    float: none;
    padding-top: 5px;
    position: relative;
    height: 50px;
    width: 100%
}

#site-navigation {
    width: 100%;
}

#footer-logo {
    display: none;
}

div.site-info {
    max-width: 750px;
    margin: 0 auto;
    text-align: center;
}

form.search-form:before {
    content: "Search:";
    font-weight: bold;
}

/* Image resize trick for IE */
.entry-content img,
.entry-header img {
    height: auto;
    width: auto;
}

body.page-template-default article.page.has-featured-image header.entry-header .entry-title {
    position: absolute;
    top: 10px;
    margin: 0;
    max-width: 70%;
}

time.updated {
    display: none;
}


/*--------------------------------------------------------------
 Tabby
--------------------------------------------------------------*/

div.tabcontent[role="tabpanel"],
h2.tabtitle {
    border: 0;
}

.responsive-tabs  ul.responsive-tabs__list {
    display: table;
    width: 100%;
    margin: 10px 0 0 0;
}

.responsive-tabs__list > .responsive-tabs__list__item {
    border: 0;
    margin: 0 auto;
    background: #007AC2;
    padding: 15px 22px;
    color: white;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    -moz-border-radius-topleft: 0;
    -moz-border-radius-topright: 0;
    -webkit-border-top-left-radius: 0;
    -webkit-border-top-right-radius: 0;
    top: 0px;
    display: table-cell;
    float: none;
    text-align: center;
    font-size: large;
}

.responsive-tabs__list > .responsive-tabs__list__item:hover {
    top: 0px;
    color: black;
    background: #007AC2;
    padding-bottom: 15px;
}

.responsive-tabs__list > .responsive-tabs__list__item--active,
.responsive-tabs__list > .responsive-tabs__list__item:focus {
    top: 0px;
    background: #6d6e71;
    color: white;
    padding-bottom: 15px;
}

/*--------------------------------------------------------------
 Ubermenu
--------------------------------------------------------------*/

ul.ubermenu-submenu li.ubermenu-retractor {
    display: none;
}

/* Responsive menu */

.col {
    margin: 0;
}

